[tool.poetry]
name = "encription-decription-game"
version = "0.1.0"
description = ""
authors = ["BradfordBarclay <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^35.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
